sec_groups.tf
variable = "name" {}

resource "aws_security_group" "jumphost" {
    name = "${var.name}-jumphost-sg"
    description = "Jumphost/Bastion servers"
    vpc_id = "${aws_vpc.hashicorp_vpc.id}"
}

resource "aws_security_group_rule" "jh-ssh" {
    security_group_id = "${aws_security_group.jumphost.id}"
    type = "ingress"
    from_port = 22
    to_port = 22
    protocol = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
}

resource "aws_security_group_rule" "jh-egress" {
    security_group_id = "${aws_security_group.jumphost.id}"
    type = "egress"
    from_port = 0
    to_port = 0
    protocol = "-1"
    cidr_blocks = ["0.0.0.0/0"]
}


resource "aws_security_group" "web" {
    name = "${var.name}-web-sg"
    description = "private webserver"
    vpc_id = "${aws_vpc.hashicorp_vpc.id}"
}

resource "aws_security_group_rule" "web-http" {
    security_group_id = "${aws_security_group.web.id}"
    type = "ingress"
    from_port = 80
    to_port = 80
    protocol = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
}
resource "aws_security_group_rule" "web-https" {
    security_group_id = "${aws_security_group.web.id}"
    type = "ingress"
    from_port = 443
    to_port = 443
    protocol = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
}
resource "aws_security_group_rule" "web-ssh" {
    security_group_id = "${aws_security_group.web.id}"
    type = "ingress"
    from_port = 22
    to_port = 22
    protocol = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
}
resource "aws_security_group_rule" "web-egress" {
    security_group_id = "${aws_security_group.web.id}"
    type = "egress"
    from_port = 0
    to_port = 0
    protocol = "-1"
    cidr_blocks = ["0.0.0.0/0"]
}





resource "aws_security_group" "db" {
    name = "${var.name}-db-sg"
    description = "private db server"
    vpc_id = "${aws_vpc.hashicorp_vpc.id}"
}

resource "aws_security_group_rule" "db-ssh" {
    security_group_id = "${aws_security_group.db.id}"
    type = "ingress"
    from_port = 22
    to_port = 22
    protocol = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
}
resource "aws_security_group_rule" "db-egress" {
    security_group_id = "${aws_security_group.db.id}"
    type = "egress"
    from_port = 0
    to_port = 0
    protocol = "-1"
    cidr_blocks = ["0.0.0.0/0"]
}

resource "aws_security_group" "elb" {
    name = "${var.name}-elb-sg"
    description = "elasic loadbalancer"
    vpc_id = "${aws_vpc.hashicorp_vpc.id}"
}

resource "aws_security_group_rule" "elb-http" {
    security_group_id = "${aws_security_group.elb.id}"
    type = "ingress"
    from_port = 80
    to_port = 80
    protocol = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
}resource "aws_security_group_rule" "elb-htts" {
    security_group_id = "${aws_security_group.elb.id}"
    type = "ingress"
    from_port = 443
    to_port = 443
    protocol = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
}
resource "aws_security_group_rule" "elb-egress" {
    security_group_id = "${aws_security_group.elb.id}"
    type = "egress"
    from_port = 0
    to_port = 0
    protocol = "-1"
    cidr_blocks = ["0.0.0.0/0"]
}


resource "aws_security_group" "nat" {
    name = "${var.name}-nat-sg"
    description = "nat instance"
    vpc_id = "${aws_vpc.hashicorp_vpc.id}"
}

resource "aws_security_group_rule" "nat-http" {
    security_group_id = "${aws_security_group.nat.id}"
    type = "ingress"
    from_port = 80
    to_port = 80
    protocol = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
}resource "aws_security_group_rule" "nat-htts" {
    security_group_id = "${aws_security_group.nat.id}"
    type = "ingress"
    from_port = 443
    to_port = 443
    protocol = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
}
resource "aws_security_group_rule" "nat-egress" {
    security_group_id = "${aws_security_group.nat.id}"
    type = "egress"
    from_port = 0
    to_port = 0
    protocol = "-1"
    cidr_blocks = ["0.0.0.0/0"]
}
